  Latest Threads
  Today's New Posts?
  Make a million dollars
  
 Investigated And Possibly Unfixable:
  Skip forward on remote causes XBMC dialog
 
 Awaiting Future Developments:
  Show more extra info in tapatalk (ie followers) - TTv4

Current Version : 1.4.7

*** 1.4.8 ***

Change to more robust method of signaling for asynchronous operations

*** 1.4.7 ***

Removed strings.xml
Removed polish language (Will return when transifex translation available. Was probably no longer accurate, and only about 15% complete anyway)
When Forum Browser is open and service notifies, it will now trigger Forum Browser to open the dialog instead of opening from the service. If the forums manager is open, it will be refresh instead.
Fix string IDs in tapatalk.py
Forum loading is no longer interrupted by dialogs

*** 1.4.6 ***

Added shadow behind wrench tab on forums manager window

*** 1.4.5 ***

Fix string IDs in skins
Change remaining static strings in skins to ID refrences
Change On label on notifications full dialog to "!" icon
Shortened translation function name for easier reading

*** 1.4.4 ***

Convert raw strings into translatable strings
Choose logo splash now stays until logo list appears
Improved dialogs with custom buttons for edit/browsing logo and clear/browse existing login url
Changes to ensure skin refreshed on FB restart after installing/removing skin mod

*** 1.4.3 ***

Keyboard mods now can change between "Normal" and mod appearance, and "Normal" is moved down some to accommodate captchas
Keyboard now only displays modified view when editing posts 

*** 1.4.2 ***

Disabling the the keyboard mod will now cause the mod to be removed
Mod install/removal now only needs FB restart instead of XBMC restart. It wouldn't need any restart, but reloading the skin while FB is open apparently crashes XBMC
Forumrummer: Search now working here too