@@ -1,4 +1,4 @@
-import xbmc, xbmcaddon
+import xbmc, xbmcaddon, os
 
 DEBUG = False
 
@@ -7,17 +7,20 @@ def ERROR(msg): LOG(msg)
 
 SIGNAL_COUNTER = 0
 
+SIGNAL_CACHE_PATH = os.path.join(xbmc.translatePath(xbmcaddon.Addon(id='script.forum.browser').getAddonInfo('profile')),'cache','signals')
+
 class SignalHub(xbmc.Monitor): # @UndefinedVariable
 	def __init__(self):
 		self.currID = 0
 		self.registry = {}
 		self.settings = xbmcaddon.Addon(id='script.forum.browser')
 		self._lastSignal = ''
+		clearSignals()
 		xbmc.Monitor.__init__(self)  # @UndefinedVariable
 		
 	def registerReceiver(self,signal,registrant,callback):
 		self.setRegistrantID(registrant)
-		if DEBUG: LOG('SignalHub registering signal %s: [%s] %s' % (signal,registrant._receiverID,repr(registrant)))
+		if DEBUG: LOG('SignalHub registering signal %s: [%s] %s' % (signal,registrant._receiverID,registrant.__class__.__name__))
 		if signal in self.registry:
 			self.registry[signal].append((registrant,callback))
 		else:
@@ -44,7 +47,7 @@ class SignalHub(xbmc.Monitor): # @UndefinedVariable
 			i=0
 			for reg, cb in self.registry[signal]:  # @UnusedVariable
 				if reg._receiverID == registrant._receiverID:
-					if DEBUG: LOG('SignalHub un-registering signal %s: [%s] %s' % (signal,registrant._receiverID,repr(registrant)))
+					if DEBUG: LOG('SignalHub un-registering signal %s: [%s] %s' % (signal,registrant._receiverID,registrant.__class__.__name__))
 					self.registry[signal].pop(i)
 					break
 				i+=1
@@ -52,33 +55,61 @@ class SignalHub(xbmc.Monitor): # @UndefinedVariable
 	def unSelfRegister(self,signal,registrant):
 		signal = signal + '.' + str(registrant._receiverID)
 		return self.unRegister(signal, registrant)
-
-	def getSignal(self):
-		self.settings = xbmcaddon.Addon(id='script.forum.browser')
-		signal = self.settings.getSetting('SignalHubSignal')
-		if not signal or signal == self._lastSignal: return None
-		return signal.split(':',1)[0]
+	
+	def validSignal(self):
+		trigger = xbmcaddon.Addon(id='script.forum.browser').getSetting('SignalHubSignal')
+		if trigger == self._lastSignal: return False
+		self._lastSignal = trigger
+		return True
 	
 	def onSettingsChanged(self):
-		signal = self.getSignal()
-		if not signal: return
+		if not self.validSignal(): return
+		signals = getSignals()
+		clearSignals()
+		if not signals: return
 		if DEBUG:
 			import threading
-			LOG('SignalHub: Thread: %s' % repr(threading.currentThread()))
-		if not signal in self.registry: return
-		for reg,cb in self.registry[signal]:  # @UnusedVariable
-			if DEBUG: LOG('SignalHub: Callback in response to signal %s for [%s] %s' % (signal,reg._receiverID,repr(reg)))
-			try:
-				cb(signal,None)
-			except:
-				ERROR('SignalHub: Callback Error')
-				continue
+			LOG('SignalHub: Thread: %s' % str(threading.currentThread().getName()))
+			if len(signals) > 1: LOG('SignalHub: Multiple signals: %s' % len(signals))
 			
+		for signal in signals:
+			if not ':' in signal: continue
+			signal,data = signal.split(':',1)
+			
+			if not signal in self.registry: return
+			for reg,cb in self.registry[signal]:  # @UnusedVariable
+				if DEBUG: LOG('SignalHub: Callback in response to signal %s for [%s] %s (%s)' % (signal,reg._receiverID,reg.__class__.__name__,data))
+				try:
+					cb(signal,None)
+				except:
+					ERROR('SignalHub: Callback Error')
+					continue
+		
+def clearSignals():
+	f = open(SIGNAL_CACHE_PATH,'w')
+	f.write('')
+	f.close()
+	
+def getSignals():
+	f = open(SIGNAL_CACHE_PATH,'r')
+	signals = f.read()
+	f.close()
+	if not signals: return []
+	return signals.split('\n')
+
+def addSignal(signal):
+	signals = getSignals()
+	signals.append(signal)
+	f = open(SIGNAL_CACHE_PATH,'w')
+	f.write('\n'.join(signals))
+	f.close()
+	
 def sendSignal(signal,data=''):
+	addSignal(signal + ':' + str(data))
 	global SIGNAL_COUNTER
-	xbmcaddon.Addon(id='script.forum.browser').setSetting('SignalHubSignal',signal + ':' + str(SIGNAL_COUNTER))
-	if DEBUG: LOG('SignalHub: Sending signal %s' % signal)
+	xbmcaddon.Addon(id='script.forum.browser').setSetting('SignalHubSignal',str(SIGNAL_COUNTER))
 	SIGNAL_COUNTER+=1
+	if DEBUG: LOG('SignalHub: Sending signal %s (%s)' % (signal,data))
 	
 def sendSelfSignal(sender,signal,data=''):
 	if not hasattr(sender,'_receiverID'): return
