@@ -322,6 +322,16 @@
 				<texture flipy="true">forum-browser-info.png</texture>
 				<colordiffuse>FF001100</colordiffuse>
 			</control>
+			<control type="image" id="254">
+				<posx>581</posx>
+				<posy>-28</posy>
+				<width>24</width>
+				<height>24</height>
+				<texture flipy="true">forum-browser-info.png</texture>
+				<colordiffuse>FFFF0000</colordiffuse>
+				<visible>StringCompare(Window.Property(PulseNotify),1)</visible>
+				<animation effect="fade" start="0" end="100" time="1000" pulse="true" condition="StringCompare(Window.Property(PulseNotify),1)">Conditional</animation>
+			</control>
 			<control type="image" id="251">
 				<posx>0</posx>
 				<posy>0</posy>
